--- a/app/views/auth/register.ejs
+++ b/app/views/auth/register.ejs
@@ -6,24 +6,24 @@
     <main class="bg-white p-6 rounded-2xl shadow-md w-full max-w-sm">
         <h1 class="text-2xl font-bold text-center mb-2 text-orange-600">Commencez dès maintenant</h1>
         <p class="text-center text-black mb-6 ">Veuillez compléter le formulaire pour créer un compte</p>
-        <form class="space-y-4">
+        <form class="space-y-4" action="/api/auth/register" method="POST">
           <label class="block">
             <span class="text-sm text-black">Nom</span>
-            <input type="text" placeholder="Entrez votre nom" class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
+            <input type="text" name="username" placeholder="Entrez votre nom" required class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
           </label>
   
           <label class="block">
             <span class="text-sm text-black">Adresse email</span>
-            <input type="email" placeholder="Entrez votre email" class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
+            <input type="email" name="email" placeholder="Entrez votre email" required class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
           </label>
   
           <label class="block">
             <span class="text-sm text-black">Mot de passe</span>
-            <input type="password" placeholder="Entrez votre mot de passe" class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
+            <input type="password" name="password" placeholder="Entrez votre mot de passe" required class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
           </label>
   
           <div class="flex items-center">
-            <input type="checkbox" id="terms" class="mr-2">
+            <input type="checkbox" id="terms" name="terms" required class="mr-2">
             <label for="terms" class="text-sm">J'accepte les <a href="#" class="text-orange-500">conditions et la politique</a></label>
           </div>
   
