--- a/app/views/auth/register.ejs
+++ b/app/views/auth/register.ejs
@@ -1,38 +1,82 @@
-<!-- Page d'inscription --> 
+<!-- Page d'inscription -->
 
-<%- include('../partials/header') %>
+<div
+  class="pic-header-login relative bg-cover bg-center bg-no-repeat min-h-screen flex items-center justify-center"
+>
+  <!-- Centrer le contenu -->
+  <main class="bg-white p-6 rounded-2xl shadow-md w-full max-w-sm">
+    <h1 class="text-2xl font-bold text-center mb-2 text-orange-600">
+      Commencez dès maintenant
+    </h1>
+    <p class="text-center text-black mb-6">
+      Veuillez compléter le formulaire pour créer un compte
+    </p>
+    <form class="space-y-4" action="/auth/register" method="POST">
+      <label class="block">
+        <span class="text-sm text-black">Nom</span>
+        <input
+          type="text"
+          name="username"
+          placeholder="Entrez votre nom"
+          required
+          class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300"
+        />
+      </label>
 
-<div class=" pic-header-login relative bg-cover bg-center bg-no-repeat min-h-screen flex items-center justify-center"> <!-- Centrer le contenu -->
-    <main class="bg-white p-6 rounded-2xl shadow-md w-full max-w-sm">
-        <h1 class="text-2xl font-bold text-center mb-2 text-orange-600">Commencez dès maintenant</h1>
-        <p class="text-center text-black mb-6 ">Veuillez compléter le formulaire pour créer un compte</p>
-        <form class="space-y-4" action="/api/auth/register" method="POST">
-          <label class="block">
-            <span class="text-sm text-black">Nom</span>
-            <input type="text" name="username" placeholder="Entrez votre nom" required class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
-          </label>
-  
-          <label class="block">
-            <span class="text-sm text-black">Adresse email</span>
-            <input type="email" name="email" placeholder="Entrez votre email" required class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
-          </label>
-  
-          <label class="block">
-            <span class="text-sm text-black">Mot de passe</span>
-            <input type="password" name="password" placeholder="Entrez votre mot de passe" required class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300">
-          </label>
-  
-          <div class="flex items-center">
-            <input type="checkbox" id="terms" name="terms" required class="mr-2">
-            <label for="terms" class="text-sm">J'accepte les <a href="#" class="text-orange-500">conditions et la politique</a></label>
-          </div>
-  
-          <button type="submit" class="w-full bg-orange-500 text-white py-3 rounded-lg hover:bg-orange-600">S'inscrire</button>
-  
-          <p class="text-sm text-center mt-4">Vous avez déjà un compte ? <a href="/connexion" class="text-orange-500">Se connecter</a></p>
-        </form>
-      </main>
-  </div>
+      <label class="block">
+        <span class="text-sm text-black">Adresse email</span>
+        <input
+          type="email"
+          name="email"
+          placeholder="Entrez votre email"
+          required
+          class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300"
+        />
+      </label>
 
+      <label class="block">
+        <span class="text-sm text-black">Mot de passe</span>
+        <input
+          type="password"
+          name="password"
+          placeholder="Entrez votre mot de passe"
+          required
+          class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300"
+        />
+      </label>
 
-<%- include('../partials/footer') %>
+      <label class="block">
+        <span class="text-sm text-black">Confirmer votre mot de passe</span>
+        <input
+          type="password"
+          name="confirmPassword"
+          placeholder="Confirmer votre mot de passe"
+          required
+          class="mt-1 block w-full p-3 border border-orange-500 rounded-lg outline-none focus:ring-orange-300"
+        />
+      </label>
+
+      <div class="flex items-center">
+        <input type="checkbox" id="terms" name="terms" required class="mr-2" />
+        <label for="terms" class="text-sm"
+          >J'accepte les
+          <a href="#" class="text-orange-500"
+            >conditions et la politique</a
+          ></label
+        >
+      </div>
+
+      <button
+        type="submit"
+        class="w-full bg-orange-500 text-white py-3 rounded-lg hover:bg-orange-600"
+      >
+        S'inscrire
+      </button>
+
+      <p class="text-sm text-center mt-4">
+        Vous avez déjà un compte ?
+        <a href="/connexion" class="text-orange-500">Se connecter</a>
+      </p>
+    </form>
+  </main>
+</div>
