début de dynamisation de la page details d'une recette

--- a/app/views/recipes/catalog.ejs
+++ b/app/views/recipes/catalog.ejs
@@ -122,7 +122,7 @@
                                     </div>
                                 </div>
         
-                                <a href="/recipes/<%= recipe.id %>" class="block text-center py-3 px-4 bg-orange-500 text-white rounded-full hover:bg-orange-600 transition-all duration-300 transform hover:-translate-y-0.5">
+                                <a href="/recette/<%= recipe.id_recette %>" class="block text-center py-3 px-4 bg-orange-500 text-white rounded-full hover:bg-orange-600 transition-all duration-300 transform hover:-translate-y-0.5">
                                     Voir la recette
                                 </a>
                             </div>
