--- a/app/views/recipes/index.ejs
+++ b/app/views/recipes/index.ejs
@@ -5,7 +5,7 @@
   <article class="rounded-lg bg-white p-6 shadow-md">
     <img src="<%= recipe.img %>" alt="<%= recipe.name %>" class="mb-4 w-full rounded-lg" />
     <h2 class="mb-2 text-2xl font-bold text-gray-800"><%= recipe.titre%></h2>
-    <p class="mb-4 text-sm text-gray-600"><%= movie.titre %> - <%= movie.annee %></p>
+    <p class="mb-4 text-sm text-gray-600"><%= recipe.Movie.titre %> - <%= recipe.Movie.annee %></p>
     <div class="mb-4 flex flex-col gap-4 md:flex-row md:items-center md:space-x-4">
       <div class="flex text-orange-600">
         <!-- nombre étoiles -->
@@ -16,10 +16,10 @@
           <span class="text-gray-300">&#9733;</span>
         <% } %>
       </div>
-      <p class="text-sm text-gray-600">(<%= reviewsCount %> avis)</p>
+
       <div>
         <ul class="list-disc list-inside text-sm">
-          <li>🍴 Catégorie : <%- category.libelle %></li>
+          <li>🍴 Catégorie : <%= recipe.category.libelle %></li> 
           <li>🕒 Temps de préparation : <%= recipe.temps_preparation %> min</li>
         </ul>
       </div>
@@ -44,12 +44,12 @@
     <section class="mb-6 grid gap-4 md:grid-cols-2">
       <div>
         <h3 class="mb-3 text-xl font-semibold text-orange-600">Ingrédients</h3>
-        <% if (ingredients.length) { %>
-          <ul class="space-y-2 rounded-lg bg-red-50 p-4 list-disc list-inside">
-            <% ingredients.forEach(ingredient => { %>
-              <li><%- ingredient.nom_ingredient %> -- (<%- ingredient.unite_mesure %>)</li>
-            <% }) %>
-          </ul>
+          <% if (recipe.dataValues.Ingredients && recipe.dataValues.Ingredients.length) { %>
+            <ul class="space-y-2 rounded-lg bg-red-50 p-4 list-disc list-inside">
+              <% recipe.dataValues.Ingredients.forEach(ingredient => { %>
+                <li><%= ingredient.dataValues.nom_ingredient %> (<%= ingredient.dataValues.unite_mesure %>)</li>
+              <% }); %>
+            </ul>
           <!-- en cas ou l'user n'a pas ajouter d'ingredient -->
         <% } else { %>
           <p>Aucun ingrédient disponible.</p>
@@ -57,24 +57,31 @@
       </div>
       <div>
         <h3 class="mb-3 text-xl font-semibold text-orange-600">Ustensiles</h3>
-        <% if (utensils.length) { %>
+        <!-- <% if (recipe.utensils.length) { %>
           <ul class="space-y-2 rounded-lg bg-red-50 p-4 list-disc list-inside">
-            <% utensils.forEach(utensil => { %>
-              <li><%- utensil.nom_ustensile %></li>
+            <% recipe.utensils.forEach(utensil => { %>
+              <li><%- recipe.utensil.nom_ustensile %></li>
             <% }) %>
-          </ul>
+          </ul> -->
+
+          <!-- <% if (recipe.dataValues.Utensils && recipe.dataValues.Utensils.length) { %>
+            <ul class="space-y-2 rounded-lg bg-red-50 p-4 list-disc list-inside">
+              <% recipe.dataValues.Utensils.forEach(utensil => { %>
+                <li><%= utensil.dataValues.nom_ustensile %></li>
+              <% }); %>
+            </ul>
         <% } else { %>
           <p>Aucun ustensile requis.</p>
-        <% } %>
+        <% } %> -->
       </div>
     </section>
 
     <section class="mb-6">
       <h3 class="mb-3 text-xl font-semibold text-orange-600">Instructions</h3>
       <ol class="list-inside list-decimal space-y-2 rounded-lg bg-red-50 p-4">
-        <% JSON.parse(recipe.etapes).forEach(etape => { %>
+        <!-- <% JSON.parse(recipe.etapes).forEach(etape => { %>
           <li><%- etape %></li>
-        <% }) %>
+        <% }) %> -->
       </ol>
     </section>
  <!-- n'existe pas dans la db  -->
@@ -89,7 +96,7 @@
 
     <section>
       <h3 class="mb-3 text-xl font-semibold text-orange-600">Commentaires</h3>
-      <% if (comments.length) { %>
+      <!-- <% if (comments.length) { %>
         <ul class="list-inside list-disc space-y-2 rounded-lg bg-red-50 p-4">
           <% comments.forEach(comment => { %>
             <li><strong><%- comment.user.name %>:</strong> <%- comment.content %></li>
@@ -97,7 +104,7 @@
         </ul>
       <% } else { %>
         <p>Aucun commentaire pour le moment. Soyez le premier à réagir !</p>
-      <% } %>
+      <% } %> -->
     </section>
   </article>
 </main>
