--- a/app/views/auth/login.ejs
+++ b/app/views/auth/login.ejs
@@ -17,7 +17,7 @@
             </label>
 
             <button type="submit" class="w-full bg-orange-500 text-white py-3 rounded-lg hover:bg-orange-600">Se connecter</button>
-            <p class="text-sm text-center mt-4">Vous n'avez pas de compte ? <a href="/inscription" class="text-orange-500">Inscrivez-vous</a></p>
+            <p class="text-sm text-center mt-4">Vous n'avez pas de compte ? <a href="/auth/register" class="text-orange-500">Inscrivez-vous</a></p>
         </form>
     </main>
 </div>
